--- a/reloj-spec.js.template
+++ b/reloj-spec.js.template
@@ -70,12 +70,12 @@ Por tanto:
 describe("Valores no válidos devuelven el binomio null:null, es decir, reloj.HORA_INVALIDA", function () {
     it("Valores nulos en hora de inicio, minutos de inicio o minutos adicionales devuelven reloj.HORA_INVALIDA",
         function () {
-            // Escribe el expect necesario
+            // Escribe los expects necesarios
         }
     );
     it("Valores negativos en hora de inicio, minutos de inicio o minutos adicionales devuelven reloj.HORA_INVALIDA",
       function () {
-        // Escribe el expect necesario
+        // Escribe los expects necesarios
         }
     );
 });
